--- a/projects/project2.html
+++ b/projects/project2.html
@@ -47,8 +47,7 @@
                   项目背景：清华大学自动化系校企合作项目，联合中国人民解放军总医院研发全球首款智能心脏超声扫查机器人
                 </p>
                 <p>
-                  工作职责：优化与完善项目中对睿尔曼机械臂的控制算法；负责机械臂末端快拆式超声探头夹具的
-                  结构设计、优化与迭代；根据需求完成项目功能集成的 UI 设计并进行测试与优化
+                  工作职责：优化与完善项目中对睿尔曼机械臂的控制算法；负责机械臂末端快拆式超声探头夹具的结构设计、优化与迭代；根据需求完成项目功能集成的 UI 设计并进行测试与优化
                 </p>
                 
 
