--- a/projects/project1.html
+++ b/projects/project1.html
@@ -74,7 +74,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 冯武祎. 保留所有权利。</p>
+            <p>© 2025 COMMON. 保留所有权利。</p>
         </div>
     </footer>
 
