--- a/projects/project3.html
+++ b/projects/project3.html
@@ -51,7 +51,7 @@
                  <h3>项目成果</h3>
         <p>
                 <p>
-            &bull;&nbsp;&nbsp;实现移动、导航等基本功能，加入多点巡航和实时避障功能，成绩优秀
+            &bull;&nbsp;&nbsp;实现移动、导航等基本功能，加入多点巡航和实时避障功能，自主导航效果及响应良好
                    <p>
 
                 <h3>关键技术</h3>
