--- a/projects/project6.html
+++ b/projects/project6.html
@@ -30,7 +30,7 @@
                 <!-- 项目标题 -->
                 <div class="project-detail-header">
                     <h2>项目六：从零制作无人机</h2>
-                    <p>机器人学实验</p>
+                    <p>极客实验室</p>
                 </div>
                 
                <!-- 在包裹图片的父元素上添加 text-align 属性 -->
