--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="container">
                 <h2>你好，我是孤门</h2>
                 <p class="subtitle">一名机器人算法工程师&技术宅</p>
+                <p class="subtitle">致力于具身智能探索</p>
                 <a href="#contact" class="btn">与我联系</a>
             </div>
         </section>
