--- a/index.html
+++ b/index.html
@@ -116,7 +116,15 @@
                 </div>
             </div>
         </section>
-
+         <!-- 项目展示 -->
+        <section id="projects" class="projects">
+            <div class="container">
+                <h3>具身智能领域前沿</h3>
+                <div class="project-grid">
+                    
+                </div>
+            </div>
+        </section>  
         <!-- 联系方式 -->
         <section id="contact" class="contact">
             <div class="container">
